Change title and names

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Tablica kanban</title>
+    <title>Simple Kanban Table</title>
     <link href="https://fonts.googleapis.com/css?family=Baloo+Paaji" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -11,8 +11,8 @@
 <body>
 
     <div id="board" class="board">
-        <h1>Tablica kanban</h1>
-        <button class="create-column">Dodaj kolumnę</button>
+        <h1>Kanban table</h1>
+        <button class="create-column">Add column</button>
         <div class="column-container"></div>
     </div>
 
